--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
+    "platform": "^1.3.6",
     "qrcode": "^1.5.0",
     "svg-captcha": "^1.4.0",
     "swagger-jsdoc": "^6.1.0",
